# protoly

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_core_tests.py
.github/workflows/: ci.yml
src/adapters/outbound/config/: config_adapter.py
src/adapters/outbound/http_client/: destination_adapter.py  source_adapter.py
src/adapters/outbound/transformation/: transformation_adapter.py
src/core/entities/: __init__.py  transformation_job.py
src/core/ports/: __init__.py  config_port.py  destination_port.py  source_port.py  transformation_port.py
src/core/use_cases/: __init__.py  deliver_data.py  fetch_source_data.py  transform_data.py
src/infrastructure/error_handling/: exceptions.py
src/services/transformation/transformations/: concatenate.py  default_value.py  direct_mapping.py  format_date.py  lowercase.py  uppercase.py
tests/: __init__.py  conftest.py
tests/core/: test_integration.py
tests/core/entities/: __init__.py  test_transformation_job.py
tests/core/use_cases/: __init__.py  test_deliver_data.py  test_fetch_source_data.py  test_transform_data.py
